OpenLDAP 2.2 Change Log

OpenLDAP 2.2.21 Engineering
	Fixed slapd group limits
	Fixed slapd/slurpd replog locking (ITS#3421)
	Fixed slaptest failure if databases cannot be started (ITS#3461)
	Fixed back-bdb entry e_ocflags reset on objectClass modify
	Fixed back-bdb retcode on referral (ITS#3475)
	Fixed back-bdb detecting deadlock in indexer (ITS#3481)
	Build Environment
		Misc fixes for dynamic modules (ITS#3401, #3428)
	Documentation
		Fixed slappasswd man page quotes (ITS#3468)

OpenLDAP 2.2.20 Release
	Fixed slapd sanity check on protocol in authz-regexp URI (ITS#3411)
	Fixed slapd ID to DN mapping when values need DN escaping (ITS#3419)
	Fixed slapd sl_realloc memory overrun (ITS#3420, #3404, #3296)
	Fixed slapd syncrepl bugs (ITS#3423, #3425, #3443, #3448)
	Fixed slapd bad tag handling
	Fixed slapd error return for modrdn invalid access (ITS#3450)
	Fixed back-bdb locks in backend_group (ITS#3263, #3365)
	Fixed back-bdb/back-hdb listing of permissive control (ITS#3453)
	Fixed back-ldap failed connection retry (ITS#3217)
	Fixed back-ldap/back-meta memory handling in attr mapping
	Fixed back-meta modrdn newSuperior target selection
	Fixed back-sql segfault when logging and delete_rule is NULL (ITS#3407)
	Build Environment
		Fixed slurpd build on Windows

OpenLDAP 2.2.19 Release
	Fixed slapd check for mandatory filter in authz-regexp URI (ITS#3396)
	Fixed slapd bad descriptor check (ITS#3400)
	Fixed slapd ACI when the subject contains '#' (ITS#3303)
	Fixed slapd syncrepl consumer memory corruption (ITS#3403)
	Fixed back-ldap malformed URI check for multiple URIs (ITS#3399)
	Fixed back-ldap/back-meta static definition of be_open() (ITS#3387)
	Fixed back-bdb cache bugs (ITS#3356, #3358), ctxcsn memory leak
	Build Environment
		Fixed lber.h dup portability bug
		Updated BDB mismatch messages (ITS#3375)
		Added BDB 4.3 detection

OpenLDAP 2.2.18 Release
	Fixed libldap schema keyword sensitivity (ITS#3334)
	Fixed libldap DN filter sensitivity (ITS#3334)